--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,3 +21,11 @@
 .active:hover {
     background-color: #212529 !important;
 }
+
+.border-left {
+    border-left: 1px solid;
+}
+
+.border-right {
+    border-right: 1px solid;
+}
