Modified output of header images

--- a/resources/sass/_basics.scss
+++ b/resources/sass/_basics.scss
@@ -81,8 +81,8 @@ a:hover {
 .bg-options {
     background-repeat: no-repeat;
     background-position: center;
+}
 
-    @media screen and (max-width: 768px) {
-        background-attachment: fixed;
-    }
+.container-full-w {
+    max-width: 1920px !important;
 }
