--- a/resources/sass/components/_navigation.scss
+++ b/resources/sass/components/_navigation.scss
@@ -1,31 +1,21 @@
 .nav-link {
     color: white;
+    border-radius: 5px;
 
     &:hover {
-        color: #198754;
+        color: black;
+        background-color: white;
     }
 }
 
-.dropdown-item {
-    &:hover {
-        background-color: #0d6efd;
-        color: white;
+.list-inline-item {
+    .nav-link {
+        padding: 8px;
     }
 }
 
 .dropdown-menu {
-    background-color: #198754;
     padding: 0;
-    
-    .dropdown-item {
-        color: white;
-    }
-
-    .dropdown-item:hover {
-        background-color: white;
-        color: #198754;
-        border-radius: 5px;
-    }
 }
 
 .nav-tabs {
